--- a/main_controller/data/index.html
+++ b/main_controller/data/index.html
@@ -89,8 +89,8 @@
 
 
   <link rel="stylesheet" href="/style.css">
-  <script src="/scripts/service_worker_reg.js" type="text/javascript"> </script>
-  <script src="/scripts/service_worker.js" type="text/javascript"> </script>
+  <script src="/service_worker_reg.js" type="text/javascript"> </script>
+  <script src="/service_worker.js" type="text/javascript"> </script>
   <script src="/scripts/logic.js" type="text/javascript"> </script>
   <script src="/scripts/app.js" type="text/javascript"> </script>
 
