--- a/main_controller/data/index.html
+++ b/main_controller/data/index.html
@@ -5,7 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
   <title>Posture control system</title>
+  
   <link rel="manifest" href="/manifest.json"/>
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="application-name" content="warships" />
+  <meta name="apple-mobile-web-app-title" content="warships" />
+  <meta name="msapplication-starturl" content="/index.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 </head>
 
 <body>
